--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
         <!--Menu do site-->
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Sobre</li>
-                <li>Portifolio</li>
-                <li>Contato</li>
-                <li>Curriculo</li>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Sobre</a>
+                </li>
+                <li>
+                    <a href="#">Portifolio</a>
+                </li>
+                <li>
+                    <a href="#">Contato</a>
+                </li>
+                <li>
+                    <a href="#">Curriculo</a>
+                </li>
             </ul>
         </nav>
         <!--End Menu do Site-->
