--- a/index.html
+++ b/index.html
@@ -1,92 +1,93 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Index</title>   
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link rel="stylesheet" href="assets/css/style.css">
+  <title>Vida Full Stack</title>
 </head>
 <body>
-    <!--Header-->
-    <header>
-        <!--Header-->
-        <img src="assets/images/logo.png" alt="Logo da Empresa VidaFullstack">
+  <!--Header-->
+  <header class="container">
+   <section class="row">
+      <img src="assets/images/logo.png" alt="Imagem da logo do site vida full stack">
         <!--Menu do site-->
-        <nav>
-            <ul>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">Sobre</a>
-                </li>
-                <li>
-                    <a href="#">Portifolio</a>
-                </li>
-                <li>
-                    <a href="#">Contato</a>
-                </li>
-                <li>
-                    <a href="#">Curriculo</a>
-                </li>
-            </ul>
-        </nav>
-        <!--End Menu do Site-->
-    </header>
-    <!--End Header-->
-
-    <!--Container-->
-    <main>
-        <!--Section -->
-        <section>
-            <!--Conteudo de texto sobre o site-->
-            <article></article>
-                <h1>Web Design</h1>
-                <h2>Landing Page</h2>
-
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
-                </p>
-
-                <a href="#">Saiba mais!</a>
-            </article>
-            <!--End conteudo de texto sobre o site-->
-
-        </section>
-        <!--End section conteudo do site-->
-        <figcaption>
-            <img src="assets/images/pessoas-construindo-pc.png" alt="Criação de Sites">
-        </figcaption>
-        
-    </main>
-    <!--End Container-->
-
-    <!--Footer-->
-    <footer>
-        <!--Rede Sociais-->
+      <nav>
         <ul>
-            <li>
-                <a href="#">
-                    <img src="assets/images/logo-insta.png" alt="Instagram">
-                </a>
-            </li>
-
-            <li>
-                <a href="#">
-                    <img src="assets/images/logo-twitter.png" alt="Twitter">
-                </a>
-            </li>
-
-            <li>
-                <a href="#">
-                    <img src="assets/images/logo-facebook.png" alt="Facebook">
-                </a>
-            </li>
+          <li>
+            <a href="#" class="btn btn-laranja">Home</a>
+          </li>
+          <li>
+            <a href="#" class="btn btn-laranja">Sobre</a>
+          </li>        
+          <li>
+            <a href="#" class="btn btn-laranja">Portifólio</a>
+          </li>
+          <li>
+            <a href="#" class="btn btn-laranja">Contato</a>
+          </li>
+          <li>
+            <a href="#" class="btn btn-laranja">Currículo</a>
+          </li>
         </ul>
-        <!--End Rede Sociais-->
+      </nav>
+      <!--End Menu do site-->
+   </section>
+
+  </header> 
+   <!--End do Header-->
+   <!--Container-->
+   <main class="container">
+    <!--Section conteudo do site-->
+    <section class="row sobre-web-design">  
+      <!--Conteudo de texto sobre o site-->  
+      <article>
+        <h1>Web Design</h1>
+        <h2>Landing Page</h2>
+
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type
+        </p>
+
+        <a href="" class="btn btn-laranja">Saiba mais...</a>
+      </article>
+       <!-- End conteudo de texto sobre o site-->
+       <figcaption>
+        <img src="assets/images/pessoas-construindo-pc.png" alt="Criação de Sites">
+      </figcaption>
+    </section>
+     <!--End Section conteudo do site-->
+    
+   
+   </main>
+   <!--End Container-->
+    <!-- Footer -->
+    <footer>
+      <!-- Redes Sociais -->
+      <ul class="row">
+        <li>
+          <a href="#">
+            <img src="./assets/images/logo-insta.png" alt="Instagram" />
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/images/logo-twitter.png" alt="Twitter" />
+          </a>
+        </li>
+
+        <li>
+          <a href="#">
+            <img src="./assets/images/logo-facebook.png" alt="Facebook" />
+          </a>
+        </li>
+      </ul>
+      <!-- Redes Sociais -->
     </footer>
-    <!--End Footer-->
+
 </body>
 </html>
