--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
       <!-- Redes Sociais -->
       <ul class="row">
         <li>
-          <a href="#">
+          <a href="https://www.instagram.com/">
             <img src="./assets/images/logo-insta.png" alt="Instagram" />
           </a>
         </li>
 
         <li>
-          <a href="#">
+          <a href="https://twitter.com/">
             <img src="./assets/images/logo-twitter.png" alt="Twitter" />
           </a>
         </li>
 
         <li>
-          <a href="#">
+          <a href="https://www.facebook.com/">
             <img src="./assets/images/logo-facebook.png" alt="Facebook" />
           </a>
         </li>
